added youtube section

--- a/index.html
+++ b/index.html
@@ -215,7 +215,50 @@
     </div>
   </section>
 
-
+  <section class="evaluate-learn-grow">
+    <div class="content-container">
+  
+      <div class="torus-section" data-aos="fade-right">
+        <!-- Torus Animation -->
+        <svg class="torus-svg" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <radialGradient id="torusGradient" cx="50%" cy="50%" r="50%">
+              <stop offset="0%" stop-color="#666" />
+              <stop offset="100%" stop-color="#333" />
+            </radialGradient>
+          </defs>
+          <circle cx="100" cy="100" r="80" fill="none" stroke="url(#torusGradient)" stroke-width="10" />
+          <circle cx="100" cy="100" r="80" fill="none" stroke="#fff" stroke-width="5" stroke-dasharray="502" stroke-dashoffset="502">
+            <animate attributeName="stroke-dashoffset" from="502" to="0" dur="4s" repeatCount="indefinite" />
+          </circle>
+          <div class="text-section">
+            <h2 class="tagline">evaluate. <span>learn.</span> grow.</h2>
+            <p class="description">
+              Unlock your potential with a focus on continuous learning and improvement. Dive into our resources and let your journey begin!
+            </p>
+          </div>
+           <!-- Text Area
+    <foreignObject x="35" y="70" width="130" height="60">
+        <div xmlns="http://www.w3.org/1999/xhtml" class="torus-text">
+          <h2 class="tagline">evaluate.<br /><span>learn.</span>grow.</h2>
+          <p>Unlock your potential!</p>
+        </div>
+      </foreignObject> -->
+        </svg>
+      </div>
+      <div class="video-section" data-aos="fade-left">
+        <!-- YouTube Video Placeholder -->
+        <iframe
+          class="youtube-video"
+          src="https://www.youtube.com/embed/E8zwushgzs0?si=MlHp9arZD9iLvJeG"
+          title="YouTube video"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  </section>
+  
   <section class="fintech-section" data-aos="fade-down" id="courses">
     <div class="container">
         <h2 class="section-title">Courses</h2>
@@ -398,7 +441,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>&copy; 2024 MYFINSCORE. All rights reserved@AJ</p>
+        <p>&copy; 2024 MYFINSCORE. All rights reserved</p>
     </div>
 </footer>
 
